--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,8 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
+  <link href="//fonts.googleapis.com/css?family=Lora:300,400,700,400italic,700italic|Open+Sans:400italic,300,400,700&amp;subset=latin,cyrillic-ext,greek-ext,vietnamese,latin-ext,cyrillic,greek" rel="stylesheet" type="text/css">
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
